log-schemas/27.5/opcua_binary_activate_session.rst
``opcua_binary_activate_session`` field reference
-------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``opcua_link_id`` (string)
     - The opcua_link_id information.

   * - ``client_algorithm`` (string)
     - The client_algorithm information.

   * - ``client_signature`` (string)
     - The client_signature information.

   * - ``client_software_cert_link_id`` (string)
     - The client_software_cert_link_id information.

   * - ``opcua_locale_link_id`` (string)
     - The opcua_locale_link_id information.

   * - ``ext_obj_type_id_encoding_mask`` (string)
     - The ext_obj_type_id_encoding_mask information.

   * - ``ext_obj_type_id_namespace_idx`` (integer - count)
     - The ext_obj_type_id_namespace_idx information.

   * - ``ext_obj_type_id_numeric`` (integer - count)
     - The ext_obj_type_id_numeric information.

   * - ``ext_obj_type_id_string`` (string)
     - The ext_obj_type_id_string information.

   * - ``ext_obj_type_id_guid`` (string)
     - The ext_obj_type_id_guid information.

   * - ``ext_obj_type_id_opaque`` (string)
     - The ext_obj_type_id_opaque information.

   * - ``ext_obj_type_id_str`` (string)
     - The ext_obj_type_id_str information.

   * - ``ext_obj_encoding`` (string)
     - The ext_obj_encoding information.

   * - ``ext_obj_policy_id`` (string)
     - The ext_obj_policy_id information.

   * - ``ext_obj_user_name`` (string)
     - The ext_obj_user_name information.

   * - ``ext_obj_password`` (string)
     - The ext_obj_password information.

   * - ``ext_obj_encryption_algorithom`` (string)
     - The ext_obj_encryption_algorithom information.

   * - ``ext_obj_certificate_data`` (string)
     - The ext_obj_certificate_data information.

   * - ``ext_obj_token_data`` (string)
     - The ext_obj_token_data information.

   * - ``user_token_algorithm`` (string)
     - The user_token_algorithm information.

   * - ``user_token_signature`` (string)
     - The user_token_signature information.

   * - ``server_nonce`` (string)
     - The server_nonce information.

   * - ``status_code_link_id`` (string)
     - The status_code_link_id information.

   * - ``activate_session_diag_info_link_id`` (string)
     - The activate_session_diag_info_link_id information.
